--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "3.0.13",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.performance.profile-analyzer": "1.1.1",
     "com.unity.purchasing": "4.1.5",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.31",
