--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ backup/
 
 # 忽略文件目录
 Assets/VacuumShaders
-Assets/Plugins
+# Assets/Plugins
 
 Packages/com.unity.render-pipelines.core@12.1.7
 Packages/com.unity.render-pipelines.universal@12.1.7
