--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ backup/
 # 忽略文件目录
 Assets/VacuumShaders
 # Assets/Plugins
+AmplifyShaderEditor
+AmplifyShaderEditor.meta
 
 Packages/com.unity.render-pipelines.core@12.1.7
 Packages/com.unity.render-pipelines.universal@12.1.7
